# aegis-lang

./: CHANGELOG.md  CMakeLists.txt  DOCUMENTATION.md  README.md  SECURITY.md  SETUP.md  calculator.ae  hello.ae  run_tests.sh
aegis-vscode/: README.md  language-configuration.json  package.json
aegis-vscode/src/: extension.js
aegis-vscode/syntaxes/: aegis.tmLanguage.json
include/: ast.hpp  ast_printer.hpp  codegen.hpp  interpreter.hpp  lexer.hpp  parser.hpp  platform.hpp  sema.hpp  token.hpp
runtime/: aegis_runtime.c  aegis_runtime.h
src/: codegen.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  platform.cpp  sema.cpp
tests/: critic_edge.ae  test3.ae  test4.ae  test5.ae
